# voskhod

./: Cargo.toml  README.md
migrations/2018-09-08-230625_create_users/: down.sql  up.sql
src/: lib.rs  models.rs  schema.rs
templates/: base.html.tera
